fix horizontal scroll

--- a/frontend_app_workspace_advanced/src/css/index.styl
+++ b/frontend_app_workspace_advanced/src/css/index.styl
@@ -16,6 +16,7 @@
 .workspace_advanced
   height 100%
   overflow-y auto
+  overflow-x hidden
   &-content
     padding 10px 10px 0 10px
   &__contentpage__content
